# rust-webrtc

./: Cargo.toml  README.md  browser_session_description.txt  webrtc.html
src/: lib.rs  main.rs
stream_data/: video_stream.h264
