[package]
name = "demo_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
arboard = "3.2.0"
base64 = "0.21.0"
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "1.0.96"
tokio = "1.27.0"
webrtc = "0.7.1"
